--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -36,6 +36,9 @@
 
             <!-- jinja template -->
             {% block hero %} {% endblock %}
+
+            <!-- admin block -->
+            {% block admin %} {% endblock %}
         </div>
         <!-- bootstrap js -->
         <script
