--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,5 +2,18 @@
 
 <!-- block hero -->
 {% block hero %}
-<h1>hello world</h1>
+<div class="container">
+    <h2>Hello</h2>
+
+    <form>
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label"
+                >{{ form.name.label(class="form-label") }}</label
+            >
+            {{ form.name(class="form-control") }}
+        </div>
+        {{ form.submit(class="btn btn-primary") }}
+    </form>
+</div>
 {% endblock %}
